--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,6 +16,7 @@ jobs:
           password: ${{ secrets.REMOTE_PASSWORD }}
           script: |
             cd /var/www/game/gamewatch
+            touch test.txt
             git pull
             npm install
             pm2 restart ./bin/www
