--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           host: ${{secrets.REMOTE_HOST}}
           username: ${{ secrets.SSH_USER }}
+          port: ${{ secrets.REMOTE_PORT }}
           password: ${{ secrets.REMOTE_PASSWORD }}
           script: |
             cd /var/www/game/gamewatch
