--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,10 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy NodeJS app
-        uses: appleboy/ssh-action@master
+        uses: fifsky/ssh-action@master
         with:
-          host: ${{secrets.REMOTE_HOST}}
-          username: ${{ secrets.SSH_USER }}
-          port: ${{ secrets.REMOTE_PORT }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: whoami
+         command: |
+           cd /tmp
+           ls -a
+         host: ${{ secrets.HOST }}
+         user: root
+         key: ${{ secrets.PRIVATE_KEY}}
