--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,4 +16,4 @@ jobs:
            ls -a
          host: ${{ secrets.REMOTE_HOST }}
          user: root
-         key: ${{ secrets.SERVER_SSH_KEY}}
+         pass: ${{ secrets.REMOTE_PASSWORD}}
