--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,8 +12,10 @@ jobs:
         uses: fifsky/ssh-action@master
         with:
          command: |
-           cd /tmp
-           ls -a
+           cd /var/www/game/gamewatch
+           git pull
+           npm install
+           pm2 restart ./bin/www
          host: ${{ secrets.REMOTE_HOST }}
          user: root
          pass: ${{ secrets.REMOTE_PASSWORD}}
